--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "js-project",
+  "name": "parcel-project-template",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://andriidorohov.github.io/project-template",
+  "homepage": "https://AndriiDorohov.github.io/project-template",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /project-template/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/andriidorohov/project-template.git"
+    "url": "git+https://github.com/AndriiDorohov/project-template.git"
   },
   "keywords": [],
   "author": "Andrii Dorohov <wedpositive@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/andriidorohov/project-template/issues"
+    "url": "https://github.com/AndriiDorohov/project-template/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
@@ -24,5 +24,8 @@
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "basiclightbox": "^5.0.4"
   }
 }
